# firestorm-cli

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  debugger  maker  memchecker  meshes.fsm  runner
include/: fsm.h  loadconfig.h  ply.h  utils.h  uttype.h  wavefront.h
src/: fsm.cpp  loadconfig.cpp  main.cpp  ply.cpp  uttype.cpp  wavefront.cpp
